fix: prevent overflow for real

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,8 +73,16 @@ body {
 
 
 html,body {
-  overflow: hidden;
-  max-width: 100%;
+  position: absolute;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
+  -webkit-touch-callout: none;
+  -webkit-user-select: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  user-select: none;
+  overflow: clip;
 }
